--- a/homework2/index.html
+++ b/homework2/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Домашка базовий js</title>
 </head>
 <body>
     <button onclick="firstTask()">Task1</button>
