finished first task

--- a/homework4/index.html
+++ b/homework4/index.html
@@ -11,6 +11,7 @@
     <button onclick="fourthTask()">Task4</button>
     <button onclick="fifthTask()">Task5</button>
     <button onclick="sixthTask()">Task6</button>
+    <button onclick="seventhTask()">Task7</button>
 
     <script type="text/javascript" src="./script.js"></script>
 </body>
