added task description to document

--- a/homeworkArrays/index.html
+++ b/homeworkArrays/index.html
@@ -9,6 +9,53 @@
     <button onclick="secondTask()">Task2</button>
     <button onclick="thirdTask()">Task3</button>
     <button onclick="fourthTask()">Task4</button>
+
+    <p>
+        <ol>
+            <li>
+                <p>
+                    Створити обєкт який описує тварину (назву, вагу, вік, середню швидкість), і наступні функції для роботи з ним: 
+                    Функція яка виведе всю інформацію про тварину. Функція яка виведе за скільки тварина зможе подолати 1000 км. (врахуйте що тварина може рухатись не більше 12 годин у день). Функція яка зможе змінити назву тварини на більш детальну.
+                </p>
+            </li>
+            <li>
+                <p>
+                    Створіть обєкт який має у собі 2 довжини сторін фігури. Додайте методи які будуть робити наступне - рахувати площу фігури, периметр фігури, зроблять фігуру 3-д, зададуть назву фігури, переведуть значення з сантиметрів у метри.
+                </p>
+            </li>
+            <li>
+                <p>
+                    Створимо аналог списка покупок (мінімум 5 покупок з всіма заданими пропертями. )
+                </p>
+                <pre>
+{
+  tomato: {
+
+    count: 5,
+    price: 50,
+    buy: false,
+    outOfstore: true
+
+  } , ...
+
+}
+                </pre>
+                <p>
+                    Виводимо список покупок - спочатку ті які є в магазині потім яких немає, 
+                    Виводимо список покупок які ми купили.
+                    Додаємо функцію яка дозволить купити продукт.
+                    Додаємо функцію яка просумує всі зроблені покупки і виведе результат.(не забуваємо що є значення кількості та ціни за одиницю товару)
+                    Додаємо можливість збільшувати кількість товару.
+                    Додаємо можливість зменшувати кількість товару(менше 0 бути не може).
+                </p>
+            </li>
+            <li>
+                <p>
+                    Задана колекція <pre>[{name: "Yura", age: 55, hobby: ["films", "games", "hiking"], type: "Admin"}, {}, {},{}]</pre>. Вивести всіх адмінів. Вивести середній вік усіх працівників. Вивести тільки унікальні хоббі працівників.
+                </p>
+            </li>
+        </ol>
+    </p>
     
     <script type="text/javascript" src="./script.js"></script>
 </body>
