added html layout for selecting color

--- a/homeworkDOM/index.html
+++ b/homeworkDOM/index.html
@@ -25,6 +25,29 @@
         
     </ol>
     
+    <div class="colors">
+        <div class="colors__select-color-block">
+            <input class="colors__select-color" type="color" id="select-color">
+        </div>
+        <div class="colors__select-item-block">
+            <div class="colors__select-item">
+                <button class="colors__select-item-btn js-select-item"></button>
+            </div>
+            <div class="colors__select-item">
+                <button class="colors__select-item-btn js-select-item"></button>
+            </div>
+            <div class="colors__select-item">
+                <button class="colors__select-item-btn js-select-item"></button>
+            </div>
+            <div class="colors__select-item">
+                <button class="colors__select-item-btn js-select-item"></button>
+            </div>
+            <div class="colors__select-item">
+                <button class="colors__select-item-btn js-select-item"></button>
+            </div>
+        </div>
+    </div>
+
     <script type="text/javascript" src="./script.js"></script>
 </body>
 </html>
