added task description to events homework

--- a/homeworkEvents/index.html
+++ b/homeworkEvents/index.html
@@ -22,19 +22,28 @@
 
     <div class="first__block">
         <p class="task">
-            Створити сторінку на якій будемо відображати базовий текст в span("Очікую на ввід даних"). При натисканні alt + A, замість спана зявиться інпут з аналогічним текстом, який тепер ви зможете відредагувати. Далі коли ви натисните shift + S дані збережуться і знов будуть відображатись як span.
+            1. Створити сторінку на якій будемо відображати базовий текст в span("Очікую на ввід даних"). При натисканні alt + A, замість спана зявиться інпут з аналогічним текстом, який тепер ви зможете відредагувати. Далі коли ви натисните shift + S дані збережуться і знов будуть відображатись як span. 
         </p>
         <input class="first__input js-input" type="text" id="first__input">
         <span class="first__span js-span" id="first__span">Очікую на ввід даних</span>
     </div>
+    <p class="task">
+        2. Повісити івент лісенер на ресайз сторінки, коли розмір сторінки буде менше 600px , виводити лог ми векористовуємо мобільну версію, при більшому розмірі сторінки - що ми використовуємо десктоп версію.
+    </p>
     <div class="second__block">
         <p class="task">
-            Повісити івент на інпут, при зміні стану інпута - виводити повідомленням зі значенням яке зараз є введено.
+            3. Повісити івент на інпут, при зміні стану інпута - виводити повідомленням зі значенням яке зараз є введено.
         </p>
         <input class="second__input" type="text" placeholder="Очікую на ввід даних" id="second__input">
         <span class="second__span" id="second__span"></span>
     </div>
+    <p class="task">
+        Повісити івент лісенер на ресайз сторінки, коли розмір сторінки буде менше 600px , виводити лог ми векористовуємо мобільну версію, при більшому розмірі сторінки - що ми використовуємо десктоп версію.
+    </p>
     
+    <p class="task">
+        4. При натисканні на кнопку альт+ о виводити модальне вікно на екран, альт + с - закривати.
+    </p>
     
     <script type="text/javascript" src="./script.js"></script>
 </body>
