--- a/homeworkPromise/index.html
+++ b/homeworkPromise/index.html
@@ -1,33 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Домашка Promise</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div class="people" id="people">
-        <div class="people__card">
-            <div class="people__property">
-                <h3 class="people__property-name">
-                    name 
-                </h3>
-                <p class="people__property-value">
-                    Luke Skywalker
-                </p>
-            </div>
-            <div class="people__property">
-                <h3 class="people__property-name">
-                    name 
-                </h3>
-                <p class="people__property-value">
-                    Luke Skywalker
-                </p>
-            </div>
+    <button onclick="firstTask()">Task1</button>
+    <button onclick="clearPeopleList()">Clear list</button>
+    <select
+    oninput="setCurrentResource(event)"
+    name="resource" 
+    id="resource">
+        <option value="films/">films</option>
+        <option value="people/">people</option>
+        <option value="planets/">planets</option>
+        <option value="species/">species</option>
+        <option value="starships/">starships</option>
+        <option value="vehicles/">vehicles</option>
+    </select>
+    <div class="container">
+        <div class="search">
+            <input
+            oninput="peopleSearch(event)" 
+            type="text" 
+            class="search__input" 
+            id="input">
+        </div>
+        <div class="people" id="people">
+
         </div>
     </div>
 
     <script type="text/javascript" src="./script.js"></script>
 </body>
-</html>
 
+</html>
