--- a/homeworkPromise/index.html
+++ b/homeworkPromise/index.html
@@ -24,7 +24,7 @@
     <div class="container">
         <div class="search">
             <input
-            oninput="peopleSearch(event)" 
+            oninput="resourceSearch(event)" 
             type="text" 
             class="search__input" 
             id="input">
